# storm-lang

./: .gitignore  CMakeLists.txt  README.md  a.out  commit.txt  commit.txt.save  ghostty_terminalsu  ghostty_terminalsucks.txt  lang-features.md  output.txt  results_fib_20260329_190659.json  results_fib_20260329_191822.json  results_fib_20260329_193711.json  results_fib_20260329_195454.json  results_fib_20260329_195617.json  s  st  storm-2.storm  storm-example.storm  storm.asm  storm_ex  storm_run  terminal.txt  transpiled.c
docs/: lang-exec.md  lang-features.md  lang-rules.md
storm/: TODO.md  main.cpp  token.h
storm/compiler/genx86/: backend.cpp  backend.h  regalloc.cpp  regalloc.h
storm/compiler/ir/: address.h  ir.cpp  ir.h
storm/compiler/lexical_analysis/: lexer.cpp  lexer.h
storm/compiler/parser/: condition.h  node.h  parser.cpp  parser.h  parser_expression.cpp
storm/compiler/semantic_analysis/: conversion.cpp  conversion.h  semantic.cpp  semantic.h
storm/file_handler/: load_files.cpp  load_files.h
storm/lexical_analysis/: lexer.cpp  lexer.h
storm/tests/: run_tests.sh
storm/tests/cases/: 01_simple_echo.storm  02_function_return.storm  03_variable_reassign.storm  04_if_statement.storm  05_for_loop.storm  06_while_loop.storm  07_range_loop.storm  08_fibonacci.storm  09_int_to_double.storm  10_double_to_int.storm
storm/transpiler/: transpile.cpp  transpile.h
